@@ -17,6 +17,8 @@ Post-v2.16.0
      * Add hardware offload support for GRE flows (experimental).
        Available only if DPDK experimantal APIs enabled during the build.
      * Add support for DPDK 21.11.
+     * Forbid use of DPDK multiprocess feature.
+     * Add support for running threads on cores >= RTE_MAX_LCORE.
    - Python:
      * For SSL support, the use of the pyOpenSSL library has been replaced
        with the native 'ssl' module.
